--- a/doc/todo
+++ b/doc/todo
@@ -1,11 +1,12 @@
 - fix: if attribute_view_gui returns empty string, invalid json is generated
 - decide if xsd file has public access or needs a function access to be displayed
 - build up std node template with at least all obj attributes and children (OK), plus create std template for all datatypes
+- verify if the data encoded in json/xml is enough to be used in fromstring method for import in another instance
 - create xsd templates to be generated on class view (OK), finish definition of all datatypes
 - create "xml" module that does the same as pagelayout but with better paths, eg index.php/xml/contentalias instead of layout/set/xml/content/view/xml/contentalias
 - same with json
 - finish tpl operators to do xml washing (charset conversion?)
-- fix std debug class to handle echoing inside an xml comment instead of html or popup => to be done via kernel patching. Right now nothing guarantees that invalid xml is emitted and breaks the comment tags
+- fix std debug class to handle echoing inside an xml comment instead of html or popup => to be done via kernel patching. Right now nothing guarantees that invalid xml is emitted and breaks the comment tags. Json comment tags can also be broken by a "*/" sequence...
 - find a way to have ez errors still routed in an xml page => creating an xml module + using setErrorModule inside (???) / propose it as an alternative in pagelayout module?
 - add hooks for xslt transform
 - ...
