--- a/INSTALL
+++ b/INSTALL
@@ -21,7 +21,10 @@ Installing the "XML View extension for eZ publish" extension
    correctly you need to be logged in or give it access to the anonymous user
    (in the admin interface, "roles and permissions" tab)
 6. By default the xml and json views are not cached, which could mean unacceptable performance.
-   To enable view cache, uncomment the appropriate line in extension/ggxmlview/settings/site.ini.append.php
+   To enable view cache, uncomment the appropriate lines in extension/ggxmlview/settings/site.ini.append.php
+7. the easiest way to have the xml and json views displayed using "nice urls" is
+   to create url aliases that point to the system url of those views, eg:
+   /sitemap => /layout/set/xml/content/view/xml/2
 
 Testing that it works
 =====================
