--- a/doc/changelogs/CHANGELOG-0.1
+++ b/doc/changelogs/CHANGELOG-0.1
@@ -1,5 +1,5 @@
-Release 0.1 - 2008.12.26
+Release 0.1 - 2008.12.XX
 
 First public release.
-Some datatypes still miss a json and/or xml template (which will produce invalid json).
+Some datatypes still miss a json and/or xml template.
 The template output should be "almost" stable in its definition.
