--- a/README
+++ b/README
@@ -23,11 +23,8 @@ Installation
 ============
 Please read the INSTALL file for installation instructions.
 
-If you are using custom datatypes in your website, you will need to
-- provide templates for their xml/json representation in content/datatype/view
-- modify the template for the xsd file: class/xml_classlist.tpl
-
 
 Troubleshooting
 ===============
 For more documentation look under doc/
+For all problems/questions, please post to the extension forums on projects.ez.no
