- more detailed install instructions
git-svn-id: http://svn.projects.ez.no/ggxmlview/trunk/extension/ggxmlview@38 f0645672-6e5d-4764-8af2-a54dcdef305a

--- a/INSTALL
+++ b/INSTALL
@@ -18,7 +18,8 @@ Installing the "XML View extension for eZ publish" extension
 3. Unpack the files in the distribution.
 4. Enable the extension in eZ publish.
    Regenerate the extensions autoloads config if enabling the extensin by hand.
-
+5. Clean the template cache
+6. (optional) give some users access permission to the xml/xsd view
 
 Testing that it works
 =====================
