git-svn-id: http://svn.projects.ez.no/ggxmlview/trunk/extension/ggxmlview@39 f0645672-6e5d-4764-8af2-a54dcdef305a

--- a/doc/todo
+++ b/doc/todo
@@ -1,10 +1,11 @@
+- improve links to embedded objects in ezxmltext attributes: try to show node id, not object id nor full url alias
 - create std templates (json,xml) for all datatypes
 - create xsd templates to be generated on class view (ok) => finish definition of all datatypes
 - verify if the data encoded in json/xml is enough to be used in fromstring method for import in another instance
 
 - add a package with a couple of objects that contain all existing datatypes, one empty and one full, for testing
 - finish tpl operators to do xml washing (charset conversion?)
-- fix std debug class to handle echoing inside an xml comment instead of html or popup => to be done via kernel patching. Right now nothing guarantees that invalid xml is emitted and breaks the comment tags. Json comment tags can also be broken by a "*/" sequence...
+- fix std debug class to handle echoing inside an xml comment instead of html or popup => to be done via kernel overriding. Right now nothing guarantees that invalid xml is emitted and breaks the comment tags. Json comment tags can also be broken by a "*/" sequence...
 - find a way to have ez errors still routed in an xml page => creating an xml module + using setErrorModule inside (???) / propose it as an alternative in pagelayout module?
 - add hooks for xslt transforms
 - ...
